# policy-reasoner-gui

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
client/: package.json
client/src/: App.tsx  index.html
client/src/api/: hello-world-example.ts  index.ts  types.ts
client/src/components/: Layout.tsx  Loader.tsx  Login.tsx
client/src/context/: auth.ts
client/src/errors/: util.ts
client/src/hooks/: useConnectorInfo.ts
client/src/pages/: ConnInfo.tsx  Deliberation.tsx  Policies.tsx
client/src/style/: index.scss
src/: auth.rs  bstowir.rs  conv.rs  deliberation.rs  eflinttojson.rs  lib.rs  main.rs  policy.rs  reasoner_conn.rs
tests/branescript/: copy_result.bs  dan-not.bs  dan.bs  data_complex.bs  epi.bs  epi_one.bs  epi_parallel.bs  hello_world.bs  task_branch.bs  task_chain.bs  task_loop.bs  task_parallel.bs  with-tags.bs  without-tags.bs
tests/eflint/: no-dan.eflint
tests/eflint-json/: no-dan-full-action.json  no-dan-full-invariant.json  no-dan.json
