[package]
name = "policy-reasoner-client-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
axum = {version = "0.7.4", features = []}
axum-macros = "*"
cookie = "*"
reqwest = {version = "0.11.23", features = ["json"]}
tracing-subscriber = "*"
serde = {version="1.0", features=["derive"]}
serde_json = "*"
tower-http = {version = "*", features=["cors"]}
axum-extra = { version = "0.9.2", features = ["cookie-private"] }
base64 = "0.21"
brane-ast = { git = "https://github.com/epi-project/brane", branch = "develop" }
brane-shr = { git = "https://github.com/epi-project/brane", branch = "develop" }
specifications = { git = "https://github.com/epi-project/brane", branch = "develop" }
eflint-json = { git = "https://gitlab.com/eflint/json-spec-rs", default-features = false, features = ["display_eflint", "v0_1_0_srv"] }
