[package]
name = "policy-reasoner-client-backend"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/epi-project/policy-reasoner-gui"
authors = [ "Bas Kloosterman", "Tim Müller" ]
description = "Backend server for the policy reasoner GUI."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
axum = {version = "0.7.4", features = []}
axum-macros = "*"
cookie = "*"
reqwest = {version = "0.11.23", features = ["json"]}
tracing-subscriber = "*"
serde = {version="1.0", features=["derive"]}
serde_json = "*"
tower-http = {version = "*", features=["cors"]}
axum-extra = { version = "0.9.2", features = ["cookie-private"] }
base64 = "0.21"
brane-ast = { git = "https://github.com/epi-project/brane", branch = "develop" }
brane-exe = { git = "https://github.com/epi-project/brane", branch = "develop" }
brane-tsk = { git = "https://github.com/epi-project/brane", branch = "develop" }
brane-shr = { git = "https://github.com/epi-project/brane", branch = "develop" }
specifications = { git = "https://github.com/epi-project/brane", branch = "develop" }
eflint-json = { git = "https://gitlab.com/eflint/json-spec-rs", default-features = false, features = ["display_eflint", "v0_1_0_srv"] }
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
